# game.libretro.scummvm

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
depends/common/scummvm/: 00-cutscenes.patch  0001-scummvm-Fix-compilation-on-win32.patch  0002-scummvm-Ask-frontend-for-default-save-directory.patch  0003-scummvm-Add-ability-to-load-resources-from-multiple-.patch  0004-scummvm-Fix-filesystem-dialogs-on-windows.patch  01-build-fix-win32.patch  02-engine-data.patch  CMakeLists.txt  scummvm.txt
game.libretro.scummvm/: addon.xml  addon.xml.in  changelog.txt
game.libretro.scummvm/resources/: buttonmap.xml
gameclient.scummvm/: addon.xml
